--- a/main.css
+++ b/main.css
@@ -1,15 +1,10 @@
-/* Reset some default styles */
-body, h1, h2, h3, p, ul, li, a {
+/* Central body of the page that contains the rest of the visuals*/
+body {
     margin: 0;
     padding: 0;
-    
 }
 
-body {
-    font-family: Arial, sans-serif;
-}
-
-/* Global Styles */
+/* Whole header section */
 header {
     background-color: #000;
     color: #fff;
@@ -17,6 +12,7 @@ header {
     display: flex;
 }
 
+/* Logo lettering */
 .logo a {
     color: #fff;
     text-decoration: none;
@@ -24,42 +20,40 @@ header {
     font-weight: bold;
 }
 
-/* Hero Section Styles */
+/* Whole hero section within the body */
 .hero {
     background-color: #fff;
     text-align: center;
     align-items: center;
     align-content: center;
     color: #000;
+    /* To give adequate space for footer */
     padding: 15px 15px 20px 15px;
 }
 
+/* Title lettering seen in the hero */
 .hero h1 {
     color: #50c878;
     text-decoration: underline;
     font-family: cursive;
 }
 
+/* Sets map size*/
 .hero #map {
     height: 450px;
     width: 80%;
     margin: 20px auto;
 }
 
+/* Centers output within the hero */
 .hero #output {
     text-align: center;
 }
 
-/* Footer Styles */
+/* Whole footer section */
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px;
-}
-
-/* Responsive Design - Adjust styles for smaller screens as needed */
-
-@media screen and (max-width: 768px) {
-    /* Add responsive styles here */
 }
