--- a/main.css
+++ b/main.css
@@ -38,8 +38,8 @@ header {
     font-family: cursive;
 }
 
-/* Sets map size*/
-.hero #map {
+/* Sets map size */
+#map {
     height: 450px;
     width: 80%;
     margin: 20px auto;
